// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableField renders renders with form context 1`] = `
<Form
  allowUndo={false}
  cancelLabel="Cancel"
  className="form-stacked"
  model={
    FormModel {
      "api": Client {
        "_chain": [Function],
        "_wrapRequest": [Function],
        "bulkUpdate": [Function],
        "handleRequestError": [Function],
        "hasProjectBeenRenamed": [Function],
      },
      "errors": Object {},
      "fieldDescriptor": Map {
        "fieldName" => Object {
          "addButtonText": "Add Thing",
          "allowEmpty": false,
          "children": [Function],
          "className": undefined,
          "columnKeys": Array [
            "column1",
            "column2",
          ],
          "columnLabels": Object {
            "column1": "Column 1",
            "column2": "Column 2",
          },
          "field": [Function],
          "flexibleControlStateSize": false,
          "formatMessageValue": false,
          "hideErrorMessage": false,
          "inline": [Function],
          "name": "fieldName",
        },
      },
      "fieldState": Object {},
      "fields": Object {},
      "formErrors": undefined,
      "formState": undefined,
      "initialData": Object {},
      "options": Object {
        "allowUndo": false,
        "apiEndpoint": undefined,
        "apiMethod": undefined,
        "onFieldChange": undefined,
        "onSubmitError": undefined,
        "onSubmitSuccess": undefined,
        "resetOnError": undefined,
        "saveOnBlur": false,
      },
      "snapshots": Array [
        Map {},
      ],
    }
  }
  onSubmit={[MockFunction]}
  requireChanges={false}
  saveOnBlur={false}
  submitDisabled={false}
  submitLabel="Save Changes"
  submitPriority="primary"
>
  <form
    className="form-stacked"
    onSubmit={[Function]}
  >
    <div>
      <TableField
        addButtonText="Add Thing"
        allowEmpty={false}
        columnKeys={
          Array [
            "column1",
            "column2",
          ]
        }
        columnLabels={
          Object {
            "column1": "Column 1",
            "column2": "Column 2",
          }
        }
        name="fieldName"
      >
        <InputField
          addButtonText="Add Thing"
          allowEmpty={false}
          columnKeys={
            Array [
              "column1",
              "column2",
            ]
          }
          columnLabels={
            Object {
              "column1": "Column 1",
              "column2": "Column 2",
            }
          }
          field={[Function]}
          formatMessageValue={false}
          inline={[Function]}
          name="fieldName"
        >
          <FormField
            addButtonText="Add Thing"
            allowEmpty={false}
            columnKeys={
              Array [
                "column1",
                "column2",
              ]
            }
            columnLabels={
              Object {
                "column1": "Column 1",
                "column2": "Column 2",
              }
            }
            field={[Function]}
            flexibleControlStateSize={false}
            formatMessageValue={false}
            hideErrorMessage={false}
            inline={[Function]}
            name="fieldName"
          >
            <Observer>
              <Field
                addButtonText="Add Thing"
                alignRight={false}
                allowEmpty={false}
                columnKeys={
                  Array [
                    "column1",
                    "column2",
                  ]
                }
                columnLabels={
                  Object {
                    "column1": "Column 1",
                    "column2": "Column 2",
                  }
                }
                disabled={false}
                field={[Function]}
                flexibleControlStateSize={false}
                formatMessageValue={false}
                id="fieldName"
                inline={true}
                name="fieldName"
                required={false}
                showHelpInTooltip={false}
                visible={true}
              >
                <FieldWrapper
                  hasControlState={true}
                  inline={true}
                >
                  <div
                    className="css-zwp5he-FieldWrapper-FieldWrapper e2iyls20"
                  >
                    <FieldControl
                      alignRight={false}
                      controlState={
                        <FormFieldControlState
                          model={
                            FormModel {
                              "api": Client {
                                "_chain": [Function],
                                "_wrapRequest": [Function],
                                "bulkUpdate": [Function],
                                "handleRequestError": [Function],
                                "hasProjectBeenRenamed": [Function],
                              },
                              "errors": Object {},
                              "fieldDescriptor": Map {
                                "fieldName" => Object {
                                  "addButtonText": "Add Thing",
                                  "allowEmpty": false,
                                  "children": [Function],
                                  "className": undefined,
                                  "columnKeys": Array [
                                    "column1",
                                    "column2",
                                  ],
                                  "columnLabels": Object {
                                    "column1": "Column 1",
                                    "column2": "Column 2",
                                  },
                                  "field": [Function],
                                  "flexibleControlStateSize": false,
                                  "formatMessageValue": false,
                                  "hideErrorMessage": false,
                                  "inline": [Function],
                                  "name": "fieldName",
                                },
                              },
                              "fieldState": Object {},
                              "fields": Object {},
                              "formErrors": undefined,
                              "formState": undefined,
                              "initialData": Object {},
                              "options": Object {
                                "allowUndo": false,
                                "apiEndpoint": undefined,
                                "apiMethod": undefined,
                                "onFieldChange": undefined,
                                "onSubmitError": undefined,
                                "onSubmitSuccess": undefined,
                                "resetOnError": undefined,
                                "saveOnBlur": false,
                              },
                              "snapshots": Array [
                                Map {},
                              ],
                            }
                          }
                          name="fieldName"
                        />
                      }
                      disabled={false}
                      errorState={
                        <Observer>
                          [Function]
                        </Observer>
                      }
                      flexibleControlStateSize={false}
                      inline={true}
                    >
                      <FieldControlErrorWrapper
                        inline={true}
                      >
                        <div
                          className="css-qe5fr0-FieldControlErrorWrapper e12jpfuq0"
                        >
                          <FieldControlWrapper>
                            <div
                              className="css-1evsibf-FieldControlWrapper e12jpfuq2"
                            >
                              <FieldControlStyled
                                alignRight={false}
                              >
                                <div
                                  className="css-ld1e0a-FieldControlStyled e12jpfuq1"
                                >
                                  <Observer>
                                    <div>
                                      <forwardRef<Button>
                                        disabled={false}
                                        icon={
                                          <ForwardRef(IconAdd)
                                            isCircled={true}
                                            size="xs"
                                          />
                                        }
                                        onClick={[Function]}
                                        size="xsmall"
                                      >
                                        <Button
                                          align="center"
                                          disabled={false}
                                          forwardRef={null}
                                          icon={
                                            <ForwardRef(IconAdd)
                                              isCircled={true}
                                              size="xs"
                                            />
                                          }
                                          onClick={[Function]}
                                          size="xsmall"
                                        >
                                          <StyledButton
                                            aria-disabled={false}
                                            aria-label="Add Thing"
                                            disabled={false}
                                            forwardRef={null}
                                            onClick={[Function]}
                                            role="button"
                                            size="xsmall"
                                          >
                                            <Component
                                              aria-disabled={false}
                                              aria-label="Add Thing"
                                              className="css-8od3q1-StyledButton edwq9my0"
                                              forwardRef={null}
                                              onClick={[Function]}
                                              role="button"
                                              size="xsmall"
                                            >
                                              <button
                                                aria-disabled={false}
                                                aria-label="Add Thing"
                                                className="css-8od3q1-StyledButton edwq9my0"
                                                onClick={[Function]}
                                                role="button"
                                                size="xsmall"
                                              >
                                                <ButtonLabel
                                                  align="center"
                                                  size="xsmall"
                                                >
                                                  <span
                                                    className="css-1dw46ju-ButtonLabel edwq9my1"
                                                  >
                                                    <Icon
                                                      hasChildren={true}
                                                      size="xsmall"
                                                    >
                                                      <span
                                                        className="css-1hbuack-Icon edwq9my2"
                                                        size="xsmall"
                                                      >
                                                        <IconAdd
                                                          isCircled={true}
                                                          size="xs"
                                                        >
                                                          <ForwardRef(SvgIcon)
                                                            size="xs"
                                                          >
                                                            <svg
                                                              fill="currentColor"
                                                              height="12px"
                                                              viewBox="0 0 16 16"
                                                              width="12px"
                                                            >
                                                              <path
                                                                d="M11.28,8.75H4.72a.75.75,0,1,1,0-1.5h6.56a.75.75,0,1,1,0,1.5Z"
                                                              />
                                                              <path
                                                                d="M8,12a.76.76,0,0,1-.75-.75V4.72a.75.75,0,0,1,1.5,0v6.56A.76.76,0,0,1,8,12Z"
                                                              />
                                                              <path
                                                                d="M8,16a8,8,0,1,1,8-8A8,8,0,0,1,8,16ZM8,1.53A6.47,6.47,0,1,0,14.47,8,6.47,6.47,0,0,0,8,1.53Z"
                                                              />
                                                            </svg>
                                                          </ForwardRef(SvgIcon)>
                                                        </IconAdd>
                                                      </span>
                                                    </Icon>
                                                    Add Thing
                                                  </span>
                                                </ButtonLabel>
                                              </button>
                                            </Component>
                                          </StyledButton>
                                        </Button>
                                      </forwardRef<Button>>
                                    </div>
                                  </Observer>
                                </div>
                              </FieldControlStyled>
                              <FieldControlState
                                flexibleControlStateSize={false}
                              >
                                <div
                                  className="css-1347hil-FieldControlState ep9s0su0"
                                >
                                  <FormFieldControlState
                                    model={
                                      FormModel {
                                        "api": Client {
                                          "_chain": [Function],
                                          "_wrapRequest": [Function],
                                          "bulkUpdate": [Function],
                                          "handleRequestError": [Function],
                                          "hasProjectBeenRenamed": [Function],
                                        },
                                        "errors": Object {},
                                        "fieldDescriptor": Map {
                                          "fieldName" => Object {
                                            "addButtonText": "Add Thing",
                                            "allowEmpty": false,
                                            "children": [Function],
                                            "className": undefined,
                                            "columnKeys": Array [
                                              "column1",
                                              "column2",
                                            ],
                                            "columnLabels": Object {
                                              "column1": "Column 1",
                                              "column2": "Column 2",
                                            },
                                            "field": [Function],
                                            "flexibleControlStateSize": false,
                                            "formatMessageValue": false,
                                            "hideErrorMessage": false,
                                            "inline": [Function],
                                            "name": "fieldName",
                                          },
                                        },
                                        "fieldState": Object {},
                                        "fields": Object {},
                                        "formErrors": undefined,
                                        "formState": undefined,
                                        "initialData": Object {},
                                        "options": Object {
                                          "allowUndo": false,
                                          "apiEndpoint": undefined,
                                          "apiMethod": undefined,
                                          "onFieldChange": undefined,
                                          "onSubmitError": undefined,
                                          "onSubmitSuccess": undefined,
                                          "resetOnError": undefined,
                                          "saveOnBlur": false,
                                        },
                                        "snapshots": Array [
                                          Map {},
                                        ],
                                      }
                                    }
                                    name="fieldName"
                                  >
                                    <Observer>
                                      <ControlState
                                        error={false}
                                        isSaved={null}
                                        isSaving={null}
                                      />
                                    </Observer>
                                  </FormFieldControlState>
                                </div>
                              </FieldControlState>
                            </div>
                          </FieldControlWrapper>
                          <Observer />
                        </div>
                      </FieldControlErrorWrapper>
                    </FieldControl>
                  </div>
                </FieldWrapper>
              </Field>
            </Observer>
          </FormField>
        </InputField>
      </TableField>
    </div>
    <StyledFooter
      saveOnBlur={false}
    >
      <div
        className="css-yfxs1k-StyledFooter e1r1zmbj0"
      >
        <DefaultButtons>
          <div
            className="css-1utgghf-DefaultButtons e1r1zmbj1"
          >
            <Observer>
              <forwardRef<Button>
                data-test-id="form-submit"
                disabled={false}
                priority="primary"
                type="submit"
              >
                <Button
                  align="center"
                  data-test-id="form-submit"
                  disabled={false}
                  forwardRef={null}
                  priority="primary"
                  type="submit"
                >
                  <StyledButton
                    aria-disabled={false}
                    aria-label="Save Changes"
                    data-test-id="form-submit"
                    disabled={false}
                    forwardRef={null}
                    onClick={[Function]}
                    priority="primary"
                    role="button"
                    type="submit"
                  >
                    <Component
                      aria-disabled={false}
                      aria-label="Save Changes"
                      className="css-1e05jtd-StyledButton edwq9my0"
                      data-test-id="form-submit"
                      forwardRef={null}
                      onClick={[Function]}
                      role="button"
                      type="submit"
                    >
                      <button
                        aria-disabled={false}
                        aria-label="Save Changes"
                        className="css-1e05jtd-StyledButton edwq9my0"
                        data-test-id="form-submit"
                        onClick={[Function]}
                        role="button"
                        type="submit"
                      >
                        <ButtonLabel
                          align="center"
                          priority="primary"
                        >
                          <span
                            className="css-zmpclt-ButtonLabel edwq9my1"
                          >
                            Save Changes
                          </span>
                        </ButtonLabel>
                      </button>
                    </Component>
                  </StyledButton>
                </Button>
              </forwardRef<Button>>
            </Observer>
          </div>
        </DefaultButtons>
      </div>
    </StyledFooter>
  </form>
</Form>
`;

exports[`TableField renders renders without form context 1`] = `
<TableField
  addButtonText="Add Item"
  allowEmpty={false}
  columnKeys={
    Array [
      "column1",
      "column2",
    ]
  }
  columnLabels={
    Object {
      "column1": "Column 1",
      "column2": "Column 2",
    }
  }
  name="fieldName"
>
  <InputField
    addButtonText="Add Item"
    allowEmpty={false}
    columnKeys={
      Array [
        "column1",
        "column2",
      ]
    }
    columnLabels={
      Object {
        "column1": "Column 1",
        "column2": "Column 2",
      }
    }
    field={[Function]}
    formatMessageValue={false}
    inline={[Function]}
    name="fieldName"
  >
    <FormField
      addButtonText="Add Item"
      allowEmpty={false}
      columnKeys={
        Array [
          "column1",
          "column2",
        ]
      }
      columnLabels={
        Object {
          "column1": "Column 1",
          "column2": "Column 2",
        }
      }
      field={[Function]}
      flexibleControlStateSize={false}
      formatMessageValue={false}
      hideErrorMessage={false}
      inline={[Function]}
      name="fieldName"
    >
      <Observer>
        <Field
          addButtonText="Add Item"
          alignRight={false}
          allowEmpty={false}
          columnKeys={
            Array [
              "column1",
              "column2",
            ]
          }
          columnLabels={
            Object {
              "column1": "Column 1",
              "column2": "Column 2",
            }
          }
          disabled={false}
          field={[Function]}
          flexibleControlStateSize={false}
          formatMessageValue={false}
          id="fieldName"
          inline={true}
          name="fieldName"
          required={false}
          showHelpInTooltip={false}
          visible={true}
        >
          <FieldWrapper
            hasControlState={true}
            inline={true}
          >
            <div
              className="css-zwp5he-FieldWrapper-FieldWrapper e2iyls20"
            >
              <FieldControl
                alignRight={false}
                controlState={
                  <FormFieldControlState
                    model={
                      MockModel {
                        "initialData": Object {
                          "fieldName": undefined,
                        },
                        "props": Object {
                          "addButtonText": "Add Item",
                          "allowEmpty": false,
                          "children": [Function],
                          "className": undefined,
                          "columnKeys": Array [
                            "column1",
                            "column2",
                          ],
                          "columnLabels": Object {
                            "column1": "Column 1",
                            "column2": "Column 2",
                          },
                          "field": [Function],
                          "flexibleControlStateSize": false,
                          "formatMessageValue": false,
                          "hideErrorMessage": false,
                          "inline": [Function],
                          "name": "fieldName",
                        },
                      }
                    }
                    name="fieldName"
                  />
                }
                disabled={false}
                errorState={
                  <Observer>
                    [Function]
                  </Observer>
                }
                flexibleControlStateSize={false}
                inline={true}
              >
                <FieldControlErrorWrapper
                  inline={true}
                >
                  <div
                    className="css-qe5fr0-FieldControlErrorWrapper e12jpfuq0"
                  >
                    <FieldControlWrapper>
                      <div
                        className="css-1evsibf-FieldControlWrapper e12jpfuq2"
                      >
                        <FieldControlStyled
                          alignRight={false}
                        >
                          <div
                            className="css-ld1e0a-FieldControlStyled e12jpfuq1"
                          >
                            <Observer>
                              <div>
                                <forwardRef<Button>
                                  disabled={false}
                                  icon={
                                    <ForwardRef(IconAdd)
                                      isCircled={true}
                                      size="xs"
                                    />
                                  }
                                  onClick={[Function]}
                                  size="xsmall"
                                >
                                  <Button
                                    align="center"
                                    disabled={false}
                                    forwardRef={null}
                                    icon={
                                      <ForwardRef(IconAdd)
                                        isCircled={true}
                                        size="xs"
                                      />
                                    }
                                    onClick={[Function]}
                                    size="xsmall"
                                  >
                                    <StyledButton
                                      aria-disabled={false}
                                      aria-label="Add Item"
                                      disabled={false}
                                      forwardRef={null}
                                      onClick={[Function]}
                                      role="button"
                                      size="xsmall"
                                    >
                                      <Component
                                        aria-disabled={false}
                                        aria-label="Add Item"
                                        className="css-8od3q1-StyledButton edwq9my0"
                                        forwardRef={null}
                                        onClick={[Function]}
                                        role="button"
                                        size="xsmall"
                                      >
                                        <button
                                          aria-disabled={false}
                                          aria-label="Add Item"
                                          className="css-8od3q1-StyledButton edwq9my0"
                                          onClick={[Function]}
                                          role="button"
                                          size="xsmall"
                                        >
                                          <ButtonLabel
                                            align="center"
                                            size="xsmall"
                                          >
                                            <span
                                              className="css-1dw46ju-ButtonLabel edwq9my1"
                                            >
                                              <Icon
                                                hasChildren={true}
                                                size="xsmall"
                                              >
                                                <span
                                                  className="css-1hbuack-Icon edwq9my2"
                                                  size="xsmall"
                                                >
                                                  <IconAdd
                                                    isCircled={true}
                                                    size="xs"
                                                  >
                                                    <ForwardRef(SvgIcon)
                                                      size="xs"
                                                    >
                                                      <svg
                                                        fill="currentColor"
                                                        height="12px"
                                                        viewBox="0 0 16 16"
                                                        width="12px"
                                                      >
                                                        <path
                                                          d="M11.28,8.75H4.72a.75.75,0,1,1,0-1.5h6.56a.75.75,0,1,1,0,1.5Z"
                                                        />
                                                        <path
                                                          d="M8,12a.76.76,0,0,1-.75-.75V4.72a.75.75,0,0,1,1.5,0v6.56A.76.76,0,0,1,8,12Z"
                                                        />
                                                        <path
                                                          d="M8,16a8,8,0,1,1,8-8A8,8,0,0,1,8,16ZM8,1.53A6.47,6.47,0,1,0,14.47,8,6.47,6.47,0,0,0,8,1.53Z"
                                                        />
                                                      </svg>
                                                    </ForwardRef(SvgIcon)>
                                                  </IconAdd>
                                                </span>
                                              </Icon>
                                              Add Item
                                            </span>
                                          </ButtonLabel>
                                        </button>
                                      </Component>
                                    </StyledButton>
                                  </Button>
                                </forwardRef<Button>>
                              </div>
                            </Observer>
                          </div>
                        </FieldControlStyled>
                        <FieldControlState
                          flexibleControlStateSize={false}
                        >
                          <div
                            className="css-1347hil-FieldControlState ep9s0su0"
                          >
                            <FormFieldControlState
                              model={
                                MockModel {
                                  "initialData": Object {
                                    "fieldName": undefined,
                                  },
                                  "props": Object {
                                    "addButtonText": "Add Item",
                                    "allowEmpty": false,
                                    "children": [Function],
                                    "className": undefined,
                                    "columnKeys": Array [
                                      "column1",
                                      "column2",
                                    ],
                                    "columnLabels": Object {
                                      "column1": "Column 1",
                                      "column2": "Column 2",
                                    },
                                    "field": [Function],
                                    "flexibleControlStateSize": false,
                                    "formatMessageValue": false,
                                    "hideErrorMessage": false,
                                    "inline": [Function],
                                    "name": "fieldName",
                                  },
                                }
                              }
                              name="fieldName"
                            >
                              <Observer>
                                <ControlState
                                  isSaved={false}
                                  isSaving={false}
                                />
                              </Observer>
                            </FormFieldControlState>
                          </div>
                        </FieldControlState>
                      </div>
                    </FieldControlWrapper>
                    <Observer />
                  </div>
                </FieldControlErrorWrapper>
              </FieldControl>
            </div>
          </FieldWrapper>
        </Field>
      </Observer>
    </FormField>
  </InputField>
</TableField>
`;
